--- a/app/api/package.json
+++ b/app/api/package.json
@@ -2,6 +2,7 @@
     "name": "api",
     "version": "1.0.0",
     "main": "server.js",
+    "type": "module",
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js dotenv_config_path=../../.env"
@@ -15,6 +16,7 @@
         "express": "^4.21.2",
         "morgan": "^1.10.0",
         "path": "^0.12.7",
+        "pg": "^8.14.1",
         "sequelize": "^6.37.6"
     },
     "devDependencies": {
