--- a/app/webfront/package.json
+++ b/app/webfront/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "Foodies",
+    "name": "foodies",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
+        "dev": "vite build --emptyOutDir --watch",
+        "build": "vite build --emptyOutDir",
         "lint": "eslint .",
         "preview": "vite preview"
     },
