update dev script

--- a/app/webfront/package.json
+++ b/app/webfront/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
+        "dev:node": "cd ../api && npm run dev > /dev/null & cd ../webfront && npm run dev",
         "dev": "vite build --emptyOutDir --watch",
         "build": "vite build --emptyOutDir",
         "lint": "eslint .",
