--- a/app/api/package.json
+++ b/app/api/package.json
@@ -19,6 +19,7 @@
         "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.2",
         "nanoid": "^5.1.5",
         "path": "^0.12.7",
         "pg": "^8.14.1",
