--- a/app/webfront/package.json
+++ b/app/webfront/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.6.1",
         "axios": "^1.8.3",
+        "clsx": "^2.1.1",
         "modern-normalize": "^3.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
