--- a/app/api/package.json
+++ b/app/api/package.json
@@ -23,7 +23,9 @@
         "nanoid": "^5.1.5",
         "path": "^0.12.7",
         "pg": "^8.14.1",
-        "sequelize": "^6.37.6"
+        "sequelize": "^6.37.6",
+        "swagger-ui-express": "^5.0.1",
+        "yamljs": "^0.3.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.9"
