--- a/app/api/package.json
+++ b/app/api/package.json
@@ -11,7 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "bcrypt": "^5.1.1",
+        "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
@@ -21,7 +21,6 @@
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.2",
         "nanoid": "^5.1.5",
-        "path": "^0.12.7",
         "pg": "^8.14.1",
         "sequelize": "^6.37.6",
         "swagger-ui-express": "^5.0.1",
