--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # dependencies
 node_modules/
 httpdocs/
@@ -8,20 +7,44 @@ build/
 
 # testing
 /coverage
+*.test.js.snap
+test-results/
 
 # production
 /build
+dist/
 
 # misc
 .idea/
 .DS_Store
 .vscode
 .env
+.env.*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# temp files
+.tmp/
+temp/
+tmp/
+.cache/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
