--- a/app/webfront/package.json
+++ b/app/webfront/package.json
@@ -11,9 +11,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^4.1.3",
         "@reduxjs/toolkit": "^2.6.1",
         "axios": "^1.8.3",
         "clsx": "^2.1.1",
+        "lucide-react": "^0.483.0",
         "modern-normalize": "^3.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
