--- a/app/webfront/package.json
+++ b/app/webfront/package.json
@@ -23,6 +23,7 @@
         "react-hot-toast": "^2.5.2",
         "react-redux": "^9.2.0",
         "react-router-dom": "^7.3.0",
+        "react-select": "^5.10.1",
         "swiper": "^11.2.6",
         "yup": "^1.6.1"
     },
