--- a/app/webfront/package.json
+++ b/app/webfront/package.json
@@ -11,6 +11,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@cloudinary/react": "^1.14.1",
+        "@cloudinary/url-gen": "^1.21.0",
         "@hookform/resolvers": "^4.1.3",
         "@reduxjs/toolkit": "^2.6.1",
         "axios": "^1.8.3",
