--- a/app/webfront/package.json
+++ b/app/webfront/package.json
@@ -25,6 +25,7 @@
         "react-hot-toast": "^2.5.2",
         "react-paginate": "^8.3.0",
         "react-redux": "^9.2.0",
+        "react-responsive": "^10.0.1",
         "react-router-dom": "^7.3.0",
         "react-select": "^5.10.1",
         "swiper": "^11.2.6",
