[render preview] Feat/profile my recipes (#48)

--- a/app/webfront/package.json
+++ b/app/webfront/package.json
@@ -5,7 +5,9 @@
     "type": "module",
     "scripts": {
         "dev:node": "cd ../api && npm run dev > /dev/null & cd ../webfront && npm run dev",
+        "dev:org": "vite",
         "dev": "vite build --emptyOutDir --watch",
+        "vite": "vite --host --open",
         "build": "vite build --emptyOutDir",
         "lint": "eslint .",
         "preview": "vite preview"
